Fix broken link, add more space to homepage on mobile

--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -15,7 +15,7 @@ body {
 	font: 300 100% var(--base-font-family);
 	color: var(--color-text);
 	-webkit-text-size-adjust: 100%;
-	background: var(--color-bg) url('/img/bg-outline.svg') top center;
+	background: var(--color-bg) url('/img/bg-outline.svg') center;
 	background-size: 2.5rem;
 }
 
