--- a/_sass/_home.scss
+++ b/_sass/_home.scss
@@ -99,7 +99,7 @@
 }
 
 .home-posts {
-    padding-bottom: 4rem;
+    padding-bottom: 6rem;
 
     @media screen and (min-width: 37.5em) {
         padding-bottom: 0;
@@ -142,7 +142,7 @@
 }
 
 .home-projects {
-    padding-bottom: 4rem;
+    padding-bottom: 6rem;
 
     @media screen and (min-width: 37.5em) {
         padding-bottom: 0;
